<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_explicit_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pindah_activity"/>
    <TextView
        android:layout_width="match_parent"
        android:labelFor="@id/input_nama"
        android:layout_height="wrap_content"
        android:text="@string/masukan_nama"/>
    <EditText
        android:id="@+id/input_nama"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:labelFor="@id/input_umur"
        android:layout_height="wrap_content"
        android:text="@string/masukan_umur"/>
    <EditText
        android:id="@+id/input_umur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:autofillHints="age" />

    <Button
        android:id="@+id/btn_intent_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pindah_dengan_data"/>
    <Button
        android:id="@+id/btn_intent_parcelable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parceable_intent"/>
    <Button
        android:id="@+id/btn_call_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hubungi_kami"
        />



        <Button
            android:id="@+id/btn_hitung_luas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hitung_luas_persegi_panjang"/>
    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/hasil"/>




</LinearLayout>